# spoit

./: Makefile  README.md  pyproject.toml
src/spoit/: main.py  message.py  snippet.py
tests/: test_main.py  test_snippet.py
tests/testdata/: no_omit.py  omit.py  users.csv
