[tool.poetry]
name = "spoit"
version = "0.2.0"
description = "Interactively extract columns from the CSV and copy the snippets to your clipboard."
authors = ["mohira <mohira@example.com>"]
repository = "https://github.com/mohira/spoit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
click = "^8.1.3"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"

[tool.poetry.scripts]
spoit = "spoit.main:main"
